fixed header logo for responsiveness and alignment

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,36 +1,40 @@
 header {
-  /* height: 75px; */
   display: flex;
-  align-items: baseline;
+  align-items: center;
   margin-bottom: 5px;
   background: #0f4471;
   width: 100%;
-  position: relative;
 }
 
 nav {
   width: 100%;
 }
 
-  .logo-container {
-  margin-left: 4%;
-  margin-right: 5px;
-  margin-top: 10px;
-  width: 8%;
-  height: 8%;
-/* display: none; */
-  /* width: 71px;
-  height: 93px; */
+.title-container {
+  white-space: nowrap;
+  display: flex;
+  margin-top: 5px;
 }
 
-header > div > img {
-  width: 100%;
-  height: 100%;
+.logo-container {
+  margin-left: 4%;
+  margin-top: 10px;
+  width: 81px;
+  margin-top: 10px;
+  text-align: center;
+}
+
+#logo {
+  display: inline-block;
+}
+
+header > div > div > img {
+  width: 50%;
 }
 
 .title {
   text-align: left;
-  /* margin-left: 4%; */
+  margin-left: 0;
 }
 
 .title > a {
@@ -113,13 +117,13 @@ header a {
 }
 
 @media (max-width: 800px) {
-  .logo-container {
+  /* .logo-container {
     margin-left: 4%;
     margin-right: 5px;
     margin-top: 5px;
     width: 12%;
     height: 12%;
-}
+} */
 }
 
 @media (max-width: 400px) {
@@ -132,14 +136,17 @@ header a {
   #register-button {
     box-shadow: none;
   }
+
   header {
     align-items: inherit;
+    padding: 8px 0 8px 0;
   }
+
+
   .logo-container {
-    margin-left: 4%;
-    margin-right: 5px;
+    margin-left: 5%;
+    margin-right: 0px;
     margin-top: 5px;
     width: 14%;
-    height: 14%;
 }
 }
